                 Added credits for gsl.{cpp,h} and permission grant to the
 November 1, 2006 - Fix some issues for building from the distro rather than
                 from CVS.
                 distribution
 Nov  2, 2006  - Get the calibrated parameter contrib install to stop polluting
                 $(prefix)/include with its headers.
               - Fix wierd issues with make dist on ubuntu edgy edge...
                 was not putting config dir into the distro.=======
                 distribution
 Nov 3, 2006   - Fix error introduced in scaler display by attempt to 
                 format totals as %u when they are actually floating point
                 exactly to keep them from overflowing.
               - Support a default buffersize preference.
 Nov 8, 2006   - Add Xamine restart handler capability to Xamine interface.
 Nov 9, 2006   - Install CHANGELOG 
 Nov 17, 2006  - Fix defect 228 - Xamine.Defaults can get printing defaults
                 all garbled causing printing to fail or crash Xamine
               - Fix defect 299 - setup.tcl is obsolete now, don't distribute
                 in Skel dir.
December 1, 2006 
               - Fix defect in edit2dmulti.tcl (pre-release).  If selecting
		a spectrum and an axis parameter is not a treeparameter,
		use the source spectrum axis definitions to provide the
		appropriate axis def for the new spectrum.
December 7, 2006 
               - Fix 2 defects:
                 o Removing fits from xamine via SpecTcl failed due to 
                   not allowing that 'gate type' to be recognized for 
                   deletion.
                 o Deleting a spectrum should delete all fits that are
                   defined on that spectrum.
December 19, 2006 
               - Fix defect per D. Caussyn FSU: CXdrInputStream.cpp was
                 doing delete m_pBuffer -> delete [] m_pBuffer.
Decmeber 21,2006 
               - Ensure that the scriptable makefile also links in 
		 the fits library.